chore: fix compatibility
